actually using Fira Sans font. can't believe it took me this long to remember that I explicitly had to call it

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,2 +1,5 @@
 @import 'bulma';
 @import url(https://fonts.googleapis.com/css?family=Fira+Sans);
+body {
+  font-family: 'Fira Sans', 'Roboto', sans-serif;
+}
